5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1594_1806.log
== SUBMITION (2019-04-02 09:52:21) 
-- CODE:
from math import*
na = float(input("a"))
r = 1-factorial(365)/(factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- EXECUTION TIME:
0.211398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 3, in <module>
    r = 1-factorial(365)/(factorial(365-na))*(1/factorial(365**na))
OverflowError: Python int too large to convert to C long

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:52:25) 
-- CODE:
from math import*
na = float(input("a"))
r = 1-factorial(365)/(factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r = 1-factorial(365)/(factorial(365-na))*(1/factorial(365**na))
OverflowError: factorial() argument should not exceed 9223372036854775807
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:55:23) 
-- CODE:
from math import*
na = float(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- EXECUTION TIME:
0.16176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: Python int too large to convert to C long

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:55:24) 
-- CODE:
from math import*
na = float(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: factorial() argument should not exceed 9223372036854775807
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:11) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- EXECUTION TIME:
0.141177
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: Python int too large to convert to C long

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:12) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- EXECUTION TIME:
0.1752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: Python int too large to convert to C long

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:13) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- EXECUTION TIME:
0.175819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1806/main.py", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: Python int too large to convert to C long

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:19:14) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
print(round(r,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r = 1-(factorial(365)/factorial(365-na))*(1/factorial(365**na))
OverflowError: factorial() argument should not exceed 9223372036854775807
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:19:42) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/365**na)
print(round(r,2))


-- EXECUTION TIME:
0.223529
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:19:43) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/365**na)
print(round(r,2))


-- EXECUTION TIME:
0.141855
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:19:44) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/365**na)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:19:45) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/365**na)
print(round(r,2))


-- EXECUTION TIME:
0.199685
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:19:46) 
-- CODE:
from math import*
na = int(input("a"))
r = 1-(factorial(365)/factorial(365-na))*(1/365**na)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:20:21) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.191984
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:35) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.146119
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:36) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.150317
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:37) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.1643
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:38) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.175469
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:38) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.291691
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/1806/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:38) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.314166
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:38) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.15172
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:38) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.296092
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:21:39) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)
s = /factorial(365-n)
p = *(1/365**n)
print(round(r+s+p,2))


-- EXECUTION TIME:
0.242965
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    s = /factorial(365-n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:00) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:02) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.242761
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:02) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.277104
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:02) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.316686
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.54
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
1.0
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:02) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.387264
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
1.0
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:02) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.560878
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
1.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
1.0
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:04) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:39) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-factorial(365)/factorial(365-n)*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.122208
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:54) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.160213
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:55) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:23:12) 
-- CODE:
from math import*
n = float(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.144403
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:23:13) 
-- CODE:
from math import*
n = float(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.195616
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:24:10) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))
s = (1/365**n)
print(round(r*s,2))


-- EXECUTION TIME:
0.174273
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-0.83
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-0.46
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
-0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:24:11) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))
s = (1/365**n)
print(round(r*s,2))


-- EXECUTION TIME:
0.134198
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-0.83
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-0.46
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
-0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:24:12) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))
s = (1/365**n)
print(round(r*s,2))


-- OUTPUT:
-0.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:24:50) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- EXECUTION TIME:
0.200434
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:24:52) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r,2))


-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:25:05) 
-- CODE:
from math import*
n = int(input("a"))
r = 1-(factorial(365)/factorial(365-n))*(1/365**n)
print(round(r*100,2))


-- EXECUTION TIME:
0.203544
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
